--- a/MVVMRx/Base.lproj/Main.storyboard
+++ b/MVVMRx/Base.lproj/Main.storyboard
@@ -1,14 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="MVVMRx" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,8 +22,51 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ER1-aa-KaI">
+                                <rect key="frame" x="36" y="235" width="303" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LDK-ue-aJv">
+                                <rect key="frame" x="36" y="285" width="303" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fsf-ma-zOn">
+                                <rect key="frame" x="35.5" y="335" width="303" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.56026276730000002" blue="0.22611117929999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Login"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b5u-CI-3O1">
+                                <rect key="frame" x="16" y="20" width="343" height="200"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.87542028940000005" blue="0.77899144480000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ER1-aa-KaI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="98o-yq-4Lw"/>
+                            <constraint firstItem="Fsf-ma-zOn" firstAttribute="width" secondItem="LDK-ue-aJv" secondAttribute="width" id="C63-fb-Wrz"/>
+                            <constraint firstItem="b5u-CI-3O1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Cai-hH-MK3"/>
+                            <constraint firstItem="LDK-ue-aJv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="E9d-ua-bux"/>
+                            <constraint firstItem="Fsf-ma-zOn" firstAttribute="top" secondItem="LDK-ue-aJv" secondAttribute="bottom" constant="20" id="JeX-e5-8M8"/>
+                            <constraint firstItem="Fsf-ma-zOn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KNv-PT-xxx"/>
+                            <constraint firstItem="b5u-CI-3O1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="b4N-sT-Hyg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="b5u-CI-3O1" secondAttribute="trailing" id="cWh-vM-sP9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ER1-aa-KaI" secondAttribute="trailing" constant="20" id="hIq-Ej-s8c"/>
+                            <constraint firstItem="b5u-CI-3O1" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.3" id="isy-Ks-L9j"/>
+                            <constraint firstItem="LDK-ue-aJv" firstAttribute="top" secondItem="ER1-aa-KaI" secondAttribute="bottom" constant="20" id="mik-Rr-quD"/>
+                            <constraint firstItem="ER1-aa-KaI" firstAttribute="top" secondItem="b5u-CI-3O1" secondAttribute="bottom" constant="15" id="t0u-Hp-LIc"/>
+                            <constraint firstItem="LDK-ue-aJv" firstAttribute="width" secondItem="ER1-aa-KaI" secondAttribute="width" id="weW-MS-TaS"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="loginBtn" destination="Fsf-ma-zOn" id="987-WY-8MD"/>
+                        <outlet property="passswordTxtField" destination="LDK-ue-aJv" id="UEJ-SF-ovZ"/>
+                        <outlet property="usernameTxtField" destination="ER1-aa-KaI" id="wy1-Il-Ur2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
